Fixes to spacing between title and content

--- a/Jacky/styles/weeks/week_1_style.css
+++ b/Jacky/styles/weeks/week_1_style.css
@@ -1,4 +1,4 @@
-.post-1 .prototype img{
+.prototype img{
     padding: 2.5em;
     margin-bottom: 1em;
 }
